--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h3 {
 }
 
 p, li {
-  margin: 0px 3% 8px 3%;
+  margin: 0px 6% 8px 6%;
 }
 
 .site-title {
@@ -70,6 +70,8 @@ img {
 
 .headbg {
   display: inline-block;
+  position: absolute;
+  margin: 0% 25% 0% 25%;
   width: 362px;
   height: 138px;
   background-image: url("http://cdn.onlyinyourstate.com/wp-content/uploads/2015/05/Unknown1.jpg");
