--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ p, li {
 }
 */
 #site-slogan {
-  display: inline-block;
+  /*display: inline-block;*/
   position: relative;
   font-size: 24px;
   text-align: center;
