--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p, li {
 */
 #site-slogan {
   /*display: inline-block;*/
-  position: relative;
+  position: absolute;
   font-size: 24px;
   text-align: center;
   color: #002244;
