--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ p, li {
 */
 #site-slogan {
   /*display: inline-block;*/
-  position: absolute;
+  position: relative;
   font-size: 24px;
   text-align: center;
   color: #002244;
-  margin: 120px 12% 12% 12%;
+  margin: 60px 12% 12% 12%;
 }
 
 #cherie {
