--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ p, li {
   top: 150px;
 }
 */
-#site-slogan {
+.site-slogan {
   /*display: inline-block;*/
-  position: relative;
+  /*position: relative;*/
   font-size: 24px;
   text-align: center;
   color: #002244;
