--- a/style.css
+++ b/style.css
@@ -33,12 +33,12 @@ p, li {
 }
 */
 .site-slogan {
-  /*display: inline-block;*/
+  display: inline-block;
   /*position: relative;*/
   font-size: 24px;
   text-align: center;
   color: #002244;
-  margin: 40px 24px 12px 24px;
+  margin: 36px 20% 12px 20%;
 }
 
 #cherie {
