--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ img {
   display: inline-block;
   width: 362px;
   height: 138px;
-  margin: 0% 25% 0% 25%;
+  margin: 30px 25% 0% 25%;
   background-image: url("http://cdn.onlyinyourstate.com/wp-content/uploads/2015/05/Unknown1.jpg");
 }
 
