--- a/style.css
+++ b/style.css
@@ -82,13 +82,17 @@ img {
 }
 
 .cbmeme {
+  display: inline-block;
   height: 200px;
 }
 
 #cbminimumwage {
+  display: inline;
 }
 
 #cbminimumwage {
+  display: inline;
+  position: relative;
 }
 
 /* 'indian red' #B0171F */
