--- a/style.css
+++ b/style.css
@@ -88,11 +88,13 @@ img {
 
 #minimumwage {
   display: inline;
+  width: 20%;
 }
 
 #cheatworkers {
   display: inline;
   position: relative;
+  width: 20%;
 }
 
 /* 'indian red' #B0171F */
