--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ img {
   background-image: url("http://cdn.onlyinyourstate.com/wp-content/uploads/2015/05/Unknown1.jpg");
 }
 
-.cbmeme {
+div .cbmeme {
   display: inline-block;
 }
 
