--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ div .cbmeme {
   display: inline-block;
 }
 
+/*
 #minimumwage {
   text-align: left;
   display: inline;
@@ -95,6 +96,7 @@ div .cbmeme {
   position: relative;
   width: 25%;
 }
+*/
 
 .btn {
   display: inline-block;
