--- a/style.css
+++ b/style.css
@@ -75,10 +75,10 @@ img {
 
 .headbg {
   display: inline-block;
-  width: 362px;
-  height: 138px;
+  width: 460px;
+  height: 630px;
   margin: 6% 25% 0% 25%;
-  background-image: url("http://cdn.onlyinyourstate.com/wp-content/uploads/2015/05/Unknown1.jpg");
+  background-image: url("https://github.com/ncnext/cbinfo/blob/gh-pages/img/cbelevatorv2.jpg");
 }
 
 div .cbmeme {
