--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ img {
   width: 460px;
   height: 630px;
   margin: 6% 25% 0% 25%;
-  background-image: url("https://github.com/ncnext/cbinfo/blob/gh-pages/img/cbelevatorv2.jpg");
+  background-image: url("https://raw.githubusercontent.com/ncnext/cbinfo/gh-pages/img/cbelevatorv2.jpg");
 }
 
 div .cbmeme {
