--- a/style.css
+++ b/style.css
@@ -74,11 +74,13 @@ img {
 }
 
 .headbg {
+  text-align: center;
   display: inline-block;
   width: 460px;
   height: 630px;
   margin: 6% 25% 0% 25%;
   background-image: url("https://raw.githubusercontent.com/ncnext/cbinfo/gh-pages/img/cbelevatorv2.jpg");
+  z-index: 0;
 }
 
 div .cbmeme {
