--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ p, li {
   /*position: relative;*/
   font-size: 36px;
   text-align: center;
-  color: #004961;
+  /*color: #004961;*/
+  color: #000033;
   margin: 12px 25% 0px 25%;
 }
 
@@ -53,7 +54,7 @@ p, li {
 #berry {
   display: inline-block;
   position: relative;
-  font-size: 90px;
+  font-size: 20px;
   font-weight: bold;
   margin: 0px 30px 0px 150px;
   z-index: 1;
