--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p, li {
   display: inline-block;
   position: absolute;
   font-size: 40px;
-  margin: 20px 130px 0px 50px;
+  /*margin: 20px 130px 0px 50px;*/
   z-index: 0;
 }
 
@@ -56,7 +56,7 @@ p, li {
   position: relative;
   font-size: 20px;
   font-weight: bold;
-  margin: 0px 30px 0px 150px;
+  /*margin: 0px 30px 0px 150px;*/
   z-index: 1;
 }
 
