--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ p, li {
   /*position: absolute;*/
   font-size: 40px;
   font-weight: bold;
-  width: 100%;
-  text-align: center;
+  /*width: 100%;
+  text-align: center;*/
   margin: 20px;
   /*margin: 20px 130px 0px 50px;*/
   z-index: 0;
@@ -62,6 +62,7 @@ p, li {
   display: inline-block;
   /*position: relative;*/
   font-size: 20px;
+  margin: 10px;
   /*margin: 0px 30px 0px 150px;*/
   z-index: 1;
 }
