--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p, li {
   font-weight: bold;
   /*width: 100%;
   text-align: center;*/
-  margin: 20px;
+  margin: 3% 3% 3% 3%;
   /*margin: 20px 130px 0px 50px;*/
   z-index: 0;
 }
@@ -62,7 +62,7 @@ p, li {
   display: inline-block;
   /*position: relative;*/
   font-size: 20px;
-  margin: 10px;
+  margin: 0 0 0 0;
   /*margin: 0px 30px 0px 150px;*/
   z-index: 1;
 }
