--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p, li {
   font-weight: bold;
   /*width: 100%;
   text-align: center;*/
-  margin: 10px;
+  margin: 10px 25% 0px 25%;
   /*margin: 20px 130px 0px 50px;*/
   z-index: 0;
 }
