--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p, li {
   font-weight: bold;
   /*width: 100%;
   text-align: center;*/
-  margin: 10px 25% 0px 25%;
+  margin: 10px 10px 0px 10px;
   /*margin: 20px 130px 0px 50px;*/
   z-index: 0;
 }
@@ -62,7 +62,7 @@ p, li {
   display: inline-block;
   /*position: relative;*/
   font-size: 30px;
-  margin: 0 0 0 0;
+  margin: 0px;
   /*margin: 0px 30px 0px 150px;*/
   z-index: 1;
 }
