--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p, li {
   text-align: center;
   /*color: #004961;*/
   color: #000033;
-  margin: 12px 25% 0px 25%;
+  /*margin: 12px 25% 0px 25%;*/
 }
 
 #cherie {
