--- a/style.css
+++ b/style.css
@@ -81,13 +81,23 @@ img {
   margin: 15px;
 }
 
-.headbg {
+/*.headbg {
   text-align: center;
   display: inline-block;
   width: 460px;
   height: 630px;
   margin: 6% 25% 0% 25%;
   background-image: url("https://raw.githubusercontent.com/ncnext/cbinfo/gh-pages/img/cbelevatorv2.jpg");
+  z-index: 0;
+}*/
+
+.headbg {
+  color: #003333;
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  height: 200px;
+  margin: 0px;
   z-index: 0;
 }
 
