--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ img {
 }*/
 
 .headbg {
-  color: #003333;
+  background-color: #003333;
   text-align: center;
   display: inline-block;
   width: 100%;
