--- a/style.css
+++ b/style.css
@@ -92,11 +92,11 @@ img {
 }*/
 
 .headbg {
-  background-color: #003333;
+  background-color: #EEEEEE;
   text-align: center;
   display: inline-block;
-  width: 100%;
-  height: 200px;
+  width: 110%;
+  height: 128px;
   margin: 0px;
   z-index: 0;
 }
@@ -130,7 +130,7 @@ div .cbmeme {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 9px;
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
