--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ h1 {
 h2 {
   font-size: 36px;
   color: #B0171F;
-  margin: 0px 0px 0px 3px;
 }
 
 h3 {
@@ -43,7 +42,7 @@ p, li {
   width: 90%;
   text-align: center;
   /*color: #004961;*/
-  color: #FFFFEE;
+  color: #FFFFFF;
   /*margin: 12px 25% 0px 25%;*/
 }
 
@@ -98,7 +97,7 @@ img {
   display: inline-block;
   width: 110%;
   height: 156px;
-  margin: -10px -10px 10px -10px;
+  margin: -10px -10px 15px -10px;
   z-index: 0;
 }
 
