--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: 'Slabo 27px', serif;
   font-size: 20px;
-  width: 90%;
+  width: 100%;
 }
 
 h1 {
@@ -99,6 +99,10 @@ img {
   height: 156px;
   margin: -10px -10px 15px -10px;
   z-index: 0;
+}
+
+.container {
+  width: 90%;
 }
 
 div .cbmeme {
