--- a/style.css
+++ b/style.css
@@ -75,11 +75,13 @@ nav {
   text-align: center;
 }
 
+/*
 img {
   display: inline-block;
   width: 30%;
   margin: 15px;
 }
+*/
 
 /*.headbg {
   text-align: center;
