--- a/style.css
+++ b/style.css
@@ -116,12 +116,12 @@ div .cbmeme {
 
 #minimumwage {
   width: 49%;
-  position: relative;
+ /* position: relative; */
 }
 
 #cheatworkers {
   width: 49%;
-  position: relative;
+ /* position: relative; */
 }
 
 /*
